# scout

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
scripts/: check-security.sh  release.sh
src/: cli.rs  complete.rs  config.rs  gh.rs  main.rs  render.rs  theme.rs  util.rs
src/checks/: actions.rs  gitops.rs  issues.rs  mod.rs  prs.rs  snapshot.rs  vulnerabilities.rs
