[package]
name = "scout"
version = "0.1.1"
edition = "2024"
description = "Watch GitHub repos and see what's currently open — PRs, issues, Actions, and vulns"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KUMachine/scout"
homepage = "https://github.com/KUMachine/scout"
keywords = ["github", "cli", "prs", "actions", "dependabot"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "scout"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[profile.release]
lto = true
codegen-units = 1
strip = true
